<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbarStyle="insideOverlay" android:scrollbars="vertical">
<LinearLayout android:id="@+id/LinearLayout02" android:layout_height="wrap_content" android:layout_width="fill_parent"><TextView android:id="@+id/TextView03" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/Stability" android:layout_weight="20"></TextView>
<TextView android:id="@+id/TextView04" android:layout_height="wrap_content" android:text="VBI" android:layout_width="fill_parent" android:layout_weight="90"></TextView>
</LinearLayout><LinearLayout android:id="@+id/LinearLayout02" android:layout_width="fill_parent" android:layout_height="20sp">




<ProgressBar style="?android:attr/progressBarStyleHorizontal" android:id="@+id/ProgressBar01" android:layout_width="fill_parent" android:layout_height="fill_parent" android:max="20" android:layout_weight="20"></ProgressBar>
<ImageView android:layout_height="wrap_content" android:id="@+id/VBILamp" android:layout_weight="90" android:layout_width="fill_parent" android:src="@drawable/lamp_off"></ImageView>
</LinearLayout><LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent"><TextView android:id="@+id/TextView03" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/Elapsed" android:layout_weight="25"></TextView><TextView android:id="@+id/TextView01" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/BPM" android:layout_weight="25"></TextView><TextView android:id="@+id/TextView02" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/Beatcount" android:layout_weight="25"></TextView>
<TextView android:id="@+id/TextView04" android:layout_height="wrap_content" android:text="@string/Interval" android:layout_weight="25" android:layout_width="fill_parent"></TextView>
</LinearLayout>
<LinearLayout android:layout_height="wrap_content" android:id="@+id/DisplayNode" android:layout_width="fill_parent"><EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:focusable="false" android:focusableInTouchMode="false" android:enabled="true" android:id="@+id/ElapsedBox" android:gravity="center_vertical|center_horizontal" android:layout_weight="25"></EditText><EditText android:numeric="integer|decimal" android:editable="false" android:layout_height="fill_parent" android:layout_gravity="bottom|fill_horizontal" android:id="@+id/BeatMonitorDisplay" android:layout_width="fill_parent" android:clickable="false" android:focusable="false" android:focusableInTouchMode="false" android:gravity="center_vertical|center_horizontal" android:layout_weight="25"></EditText><EditText android:layout_height="fill_parent" android:editable="false" android:layout_gravity="bottom|fill_horizontal" android:id="@+id/BeatCountDisplay" android:layout_width="fill_parent" android:clickable="false" android:focusable="false" android:focusableInTouchMode="false" android:gravity="center_vertical|center_horizontal" android:layout_weight="25"></EditText>



<EditText android:layout_height="wrap_content" android:id="@+id/Interval" android:layout_weight="25" android:layout_width="fill_parent" android:editable="false" android:clickable="false" android:gravity="center_vertical|center_horizontal" android:focusable="false" android:focusableInTouchMode="false"></EditText>
</LinearLayout><LinearLayout android:id="@+id/LinearLayout02" android:layout_height="wrap_content" android:layout_width="fill_parent"><TextView android:id="@+id/TextView03" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/Avgbeat"></TextView>

</LinearLayout><LinearLayout android:id="@+id/LinearLayout03" android:layout_height="wrap_content" android:layout_width="fill_parent"><EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/Avg10" android:focusable="false" android:focusableInTouchMode="false" android:layout_weight="25" android:gravity="center_vertical|center_horizontal"></EditText>
<EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/Avg15" android:focusable="false" android:focusableInTouchMode="false" android:layout_weight="25" android:gravity="center_vertical|center_horizontal"></EditText>
<EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/Avg20" android:focusable="false" android:focusableInTouchMode="false" android:layout_weight="25" android:gravity="center_vertical|center_horizontal"></EditText>
<Button android:layout_gravity="fill_horizontal" android:layout_height="fill_parent" android:layout_width="fill_parent" android:clickable="true" android:id="@+id/ResetButton" android:layout_weight="25" android:text="@string/Reset" android:focusable="false" android:focusableInTouchMode="false"></Button></LinearLayout>
<LinearLayout android:id="@+id/linearLayout2" android:layout_height="wrap_content" android:layout_width="match_parent">
    <TextView android:layout_height="wrap_content" android:text="@string/beatsound" android:id="@+id/textView1" android:layout_width="match_parent" android:layout_weight="0.7"></TextView>
    <TextView android:layout_height="wrap_content" android:text="@string/Manual" android:id="@+id/textView2" android:layout_width="match_parent" android:layout_weight="0.3"></TextView>
</LinearLayout>
<LinearLayout android:gravity="bottom" android:layout_height="wrap_content" android:id="@+id/CommandButtons" android:layout_width="match_parent" android:layout_gravity="right">
    <LinearLayout android:layout_width="wrap_content" android:layout_height="match_parent" android:id="@+id/BeatSoundControl" android:layout_weight="0.7">
        <ToggleButton android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/beatsound" android:layout_weight="30" android:id="@+id/beatSoundToggle"></ToggleButton>
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="match_parent" android:id="@+id/ManualSetControl" android:layout_gravity="left">
        <EditText android:layout_height="wrap_content" android:layout_width="90dip" android:id="@+id/bpmInputField" android:text="@string/Zero" android:inputType="numberSigned"></EditText>
        <Button android:layout_height="wrap_content" android:text="@string/Set" android:layout_width="wrap_content" android:id="@+id/setBPMButton"></Button>
        <Button android:layout_height="wrap_content" android:text="@string/Plus" android:layout_width="wrap_content" android:id="@+id/plusButton"></Button>
        <Button android:layout_height="wrap_content" android:text="@string/Minus" android:layout_width="wrap_content" android:id="@+id/minusButton"></Button>
        <Button android:layout_height="wrap_content" android:text="@string/Intent" android:layout_width="wrap_content" android:id="@+id/sendIntentButton"></Button>
    </LinearLayout>
</LinearLayout><Button android:layout_gravity="left" android:layout_height="fill_parent" android:layout_width="fill_parent" android:clickable="true" android:id="@+id/BeatButton" android:text="@string/Beat" android:textSize="30sp" android:focusable="true" android:focusableInTouchMode="true" android:layout_weight="0.3"></Button>













</LinearLayout>
