<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:id="@+id/LinearLayout01" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="fill_parent" android:gravity="top" android:layout_gravity="top|fill" android:baselineAligned="true" android:paddingLeft="10px" android:paddingRight="10px" android:paddingTop="10px" android:paddingBottom="10px" android:padding="10px" android:minHeight="400px" android:minWidth="300px"><ImageView android:id="@+id/ImageView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon"></ImageView><TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:text="@string/app_name" android:textSize="20px" android:layout_height="wrap_content"></TextView>

<TextView android:id="@+id/TextView02" android:text="@string/VersionInfo" android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>


<TextView android:id="@+id/TextView03" android:layout_height="wrap_content" android:text="@string/app_info" android:layout_width="fill_parent"></TextView>
</LinearLayout>

